@@ -1,5 +1,5 @@
 // Copyright 2002-2011, University of Colorado
-package edu.colorado.phet.simsharinganalysis.scala
+package edu.colorado.phet.simsharinganalysis
 
 /**
  * @author Sam Reid
